# ci-playground

./: .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Dockerfile  Main.cpp  README.md  build.sh  ci_install_clang.sh  conanfile.txt  main.cpp  setup.sh  test.cpp  test.sh
.github/workflows/: ci.yml
ci-docker-opencv3/: Dockerfile
script/: build-image.sh  ci_build.sh  ci_install.sh  ci_install_deps.sh
